SERVER-69244 - $merge fails when session default read concern has been set to "majority"

(cherry picked from commit 46fbe5b380dfaa32ee22b137162d90db9debd23e)